examples/pytorch/line_graph/hpc_outputs/slurm_209670.err
+ python train_exp_lgnn_sim.py --n-nodes 400 --n-graphs 6000 --gpu 0 --interval 100 --verbose --save-path lgnn_sim
Traceback (most recent call last):
  File "train_exp_lgnn_sim.py", line 24, in <module>
    import exp_lgnn_sim
  File "/home/lc3909/dgl/examples/pytorch/line_graph/exp_lgnn_sim.py", line 114
    self.theta_y = new_linear()s
                               ^
SyntaxError: invalid syntax
